autobake: detect missing Nix expr. dependencies

--- a/content/2019/08.md
+++ b/content/2019/08.md
@@ -7,6 +7,16 @@ Description: (TODO: QUOTE)
 - Example news item title [with a link](http://example.com)
 
   Optional item description
+  
+- [autobake: Create [Nix] build recipes through automated trial and error](https://github.com/jameysharp/autobake) (an early prototype)
+
+  The project attempts to auto-detect missing dependencies when writing a new Nix expression. In the author's words:
+  
+  *"During a build [with missing dependencies], autobake watches which files the build process tries and fails to open.
+  After the build finishes (whether successful or not), autobake looks for packages which contain the missing files.
+  This approach may over-estimate the build dependencies, when build systems check for the existence of software they
+  don't actually need. [Still], it takes a lot less work to remove dependencies by hand than it does to guess which
+  packages might be necessary."*
 
 
 # Contribute to NixOS Weekly Newsletter
